# monoxide

./: .gitmodules  Cargo.toml  README.md  build.rs
fake_headers/xrt/: xrt_config_build.h  xrt_config_drivers.h  xrt_config_have.h  xrt_config_vulkan.h
helper_crates/bindings_include/: Cargo.toml
helper_crates/bindings_include/src/: lib.rs
helper_crates/build-helper/: Cargo.toml
helper_crates/build-helper/src/: lib.rs  target_helper.rs
monado_crates/aux-gstreamer/: Cargo.toml  build.rs
monado_crates/aux-gstreamer/src/: lib.rs
monado_crates/aux-math/: Cargo.toml  build.rs
monado_crates/aux-os/: Cargo.toml  build.rs
monado_crates/aux-util/: Cargo.toml  build.rs
src/: main.rs  static_wrapper.h
