[package]
name = "monoxide"
version = "0.1.0"
authors = ["Malek <pocmalek@gmail.com>"]
description = "Monoxide is a step-by-step carcinization/oxidation of Monado, replacing it's current code with rust slowly, as well as using rust crates to augment the monado experience heavily."
repository = "https://github.com/MalekiRe/monoxide"
readme = "README.md"
rust-version = "1.65.0"
build = "build/main_build.rs"
publish = false

[workspace]
members = [
    "monado_crates/aux-math",
    "monado_crates/aux-util",
    "helper_crates/build-helper",
    "helper_crates/bindings_include"
]

[dependencies]
aux-math = { path = "monado_crates/aux-math"}
aux-util = { path = "monado_crates/aux-util"}

[dev-dependencies]

[build-dependencies]
bindgen = "0.63.0"
cc = {version = "1.0.77", features = ["parallel"]}
pkg-config = "0.3.26"