[package]
name = "monoxide"
version = "0.1.0"
authors = ["Malek <pocmalek@gmail.com>"]
description = "Monoxide is a step-by-step carcinization/oxidation of Monado, replacing it's current code with rust slowly, as well as using rust crates to augment the monado experience heavily."
repository = "https://github.com/MalekiRe/monoxide"
readme = "README.md"
rust-version = "1.65.0"
publish = false

[workspace]
members = [
    "monado_crates/aux-math",
    "monado_crates/aux-util",
    "monado_crates/aux-gstreamer",
    "monado_crates/aux-os",
    "helper_crates/build-helper",
    "helper_crates/bindings_include"
]

[dependencies]
aux-math = { path = "monado_crates/aux-math"}
aux-util = { path = "monado_crates/aux-util"}
aux-os = { path = "monado_crates/aux-os"}
aux-gstreamer = { path = "monado_crates/aux-gstreamer"}
ustr = "0.9.0"


[dev-dependencies]

[build-dependencies]
cmake = "0.1.49"